berry/skin-berry.less
/* ... */
	.fs-zero {font-size: 0;}

// ###############################
// end framework.less
// ###############################

// ###############################
// start grid.less
// ###############################
	@side-gutters: false;
	@padded-grid: true;
	@grid-system: fractions; // fractions, disabled
	// set main breakpoints
	@dt: 960px;
	@tb: 600px;
	@mb: 320px;

// ###############################
// end grid.less
// ###############################

// ###############################
// start navigation.less
// ###############################
// Tool bar
	@has-tools-nav: enabled; //disabled, enabled
	@tools-nav-position: both; // both, center, left, right, justify
	@tools-nav-style: dividers; // blocks, dividers
	@tools-nav-padding: (@padding  / 2);
		// if blocks
		@tools-nav-border: 1px solid #ccc;
		// if pipes
		@vertical-divider: \0020 |; // can be anything for example |, \, >, :, ][
		// You can use utf8 hexc odes like the following 
		// \b7 = minddot, 
		// \0020 \BB = double right angle quote
		// \0020 \2023 = right triangle
		// \0020 \009B Right single angle quote

// header navigation
	@has-header-nav: enabled; //disabled, enabled
	@header-nav-position: full-fluid; // full-fluid, full-equal, center, left, right
	@header-nav-style: blocks; // blocks, dividers, tabs
	@header-nav-padding: (@padding / 1.5) @padding;
		// if blocks
		@header-nav-border: 0;

// breadcrumbs
	@has-breadcrumbs-nav: enabled; //disabled, enabled
	@breadcrumbs-style: chevrons; // disabled, blocks, bullets, chevrons
	@breadcrumbs-padding: 1em;
	@breadcrumbs-space: 0.2em;
	@breadcrumbs-bullet: >;

// side navigation in main container
	@has-side-nav: enabled; // disabled, enabled
	@side-nav-style: disabled; // disabled, simple, blocks, lines
	@side-nav-padding: (@padding / 2) @padding;
	@side-nav-border: 1px solid @colour-side-nav-border;

// flyouts
	@flyouts-width: disabled; // disabled, single, multi, full

// ###############################
// end navigation.less
// ###############################

// ###############################
// start styles.less
// ###############################
	@padding: 20px; // 0 - 9px
	@border-radius: 5px; // 0 - 9px
	@border-solid: 1px solid #ccc;
	@border-dotted: 1px dotted #ccc;
	@opacity: 0.8;

// ###############################
// end styles.less
// ###############################

// ###############################
// start type.less
// ###############################
	// choose font pair from list below or add your own. Delete any that you aren't using.
	// Raleway & Droid Sans
		@import url(http://fonts.googleapis.com/css?family=Raleway:200,300,400,700);
		@import url(http://fonts.googleapis.com/css?family=Droid+Sans:400,700);

	// Ubuntu & Vollkorn
		@import url(http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700);
		@import url(http://fonts.googleapis.com/css?family=Vollkorn:400,400italic,700);

	@heading-font-family: Raleway;
	@heading-font-weight: 200;
	@heading-alt-font-weight: 300;
	@heading-alt2-font-weight: 400;

	@body-font-family: "Droid Sans";
	@body-font-weight: 400;
	@body-alt-font-weight: 700;

	@nav-font-family: Raleway;
	@nav-font-weight: 700;

	@logo-font-family: Raleway;
	@logo-font-weight: 300;

	@text-size: 13px;
	@line-height: 1.4;

	@h1-size: 40px;
	@h1-line-height: 1.2;
	@h1-margin: 0.3em; // Number and unit
	@h2-size: 36px;
	@h2-line-height: 1.2;
	@h2-margin:  0.3em; // Number and unit
	@h3-size: 32px;
	@h3-line-height: 1.2;
	@h3-margin: 0.3em; // Number and unit
	@h4-size: 28px;
	@h4-line-height: 1.2;
	@h4-margin: 0.3em; // Number and unit
	@h5-size: 24px;
	@h5-line-height: 1.2;
	@h5-margin: 0.3em; // Number and unit
	@h6-size: 20px;
	@h6-line-height: 1.4;
	@h6-margin: 0.3em; // Number and unit

	@tools-nav-font-size: 13px;
	@header-nav-font-size: 13px;
	@side-nav-font-size: 14px;

// ###############################
// end type.less
// ###############################

header {position: relative;
	.gradient (@stops: left, #141031, #752663, #6c4fad, #141031; @fallback: #141031;);
	&:after  {.circle;border: 30px solid rgba(255,255,255,0.1); top: 35px; left: 60%;}
	&:before {.circle; border: 70px solid rgba(255,255,255,0.1); top: 170px; left: 26%;}
	& > div {
		&:after  {.circle; border: 50px solid rgba(255,255,255,0.1); top: 10px; left: 11%;}
		&:before {.circle; border: 100px solid rgba(255,255,255,0.1); top: 70px; left: 75%;}
	}
}
.circle{.pseudo; width:0; height: 0; border-radius: 100%; box-shadow: 0 0 8px 8px rgba(255,255,255,0.1); position: absolute; visibility: visible; pointer-events: none;}
div.main {padding-top: 20px;}

@bright-pink: #df13a8;
@deep-pink: #606;
@purple: #306;
@pale-pink: #ffddf6;
@teal: #066;

